--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,71 @@
 body{
+background-color: #e2d9bf;
+font-family: 'Roboto', sans-serif;
 
+}
 
+span{
+  font-weight: 900;
 }
 
 h1{
-  color: gold;
+  color: #b8992d;
+  font-weight: 100;
+}
+#green{
+  background-color: #2c6230;
+  height: 50px;
+  width:auto;
 }
 
-/*Why is this all blank*/
+#HRSC_Gold{
+  width: auto;
+  background-color: white;
+  border-color:#b8992d;
+  border-top-style:solid;
+  border-bottom-style: solid;
+  border-bottom-color: #2c6230;
+  border-top-width: 20px;
+  border-bottom-width: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+
+.container{
+  width: auto;
+  height: 300px;
+  background-color: white;
+  padding: 30px;
+}
+.form_buttons{
+  width: 300px;
+  text-align: center;
+  margin: auto;
+}
+.standard-button{
+    color: #fff;
+    background-color: #2c6230;
+    padding: 1em 2em;
+    width: 25em;
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    text-align: center;
+
+}
+
+
+
+/*Footer Section */
+footer{
+  clear: both;
+  background-color: white;
+}
+
+.address{
+  float: left;
+  background-color: white;
+}
+.contact{
+  float:right;
+  background-color: white;
+}
