--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ font-family: 'Roboto', sans-serif;
 
 }
 
-span{
+h1 span {
   font-weight: 900;
 }
 
@@ -19,6 +19,8 @@ h1{
 }
 
 #HRSC_Gold{
+  font-size: 2em;
+  line-height: 1em;
   width: auto;
   background-color: white;
   border-color:#b8992d;
@@ -31,14 +33,20 @@ h1{
   padding-left: 10px;
 }
 
+.middle{
+  height:auto;
+}
+
 .container{
   width: auto;
-  height: 300px;
+  height:300px;
   background-color: white;
-  padding: 30px;
+  padding: 10% 10% 4% 10%;
+  align-self: center;
+  overflow: visible;
 }
 .form_buttons{
-  width: 300px;
+  width: 100%;
   text-align: center;
   margin: auto;
 }
@@ -50,18 +58,11 @@ h1{
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
     text-align: center;
-}
-.standard-button{
-    &:hover { line-height:1em;
+    margin: .5em;
 
-    }
-
-    &::before {
-      content: attr(data-text);
-      color: purple;
-    }
 
 }
+
 .grow{
     display: inline-block;
     transition-duration: 0.4s;
@@ -80,23 +81,45 @@ h1{
     padding-bottom: 1.5em;
     transform: scale(1.15.);
     -webkit-transform: scale(1.15);
-
 }
 
+a :link{
+  text-decoration: underline;
+  color: currentColor;
 
-
+}
 
 /*Footer Section */
 footer{
-  clear: both;
-  background-color: white;
+  background-color: #2c6230;
+  width: 100%;
+  height: auto;
+  border-top-style: solid;
+  border-top-width: 10px;
+  border-top-color: #2c6230;
+  overflow: visible;
 }
 
-.address{
-  float: left;
+footer .bottom{
   background-color: white;
+  border-top-style: solid;
+  border-top-width: 5px;
+  border-top-color: #b8992d;
+  padding: 20px 5px 0px 5px;
+  overflow: visible;
 }
-.contact{
-  float:right;
-  background-color: white;
+
+footer .address{
+  padding-top: 0;
+  margin: 5px;
+  display: inline-block;
+}
+
+footer .contact{
+  display: inline-block;
+  float: right;
+}
+
+footer span{
+  font-weight: 900;
 }
